Araç Listele Formu
Araç listeleme formunda kiralanmış araçların gösterildiğin bir tablo eksikliği fark edilip bir tablo oluşturuldu

--- a/AracListe.resx
+++ b/AracListe.resx
@@ -124,55 +124,58 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
         LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
-        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAANgsAAAJNU0Z0AUkBTAMBAQAB
-        CAEAAQgBAAEoAQABKAEABP8BIQEACP8BQgFNATYHAAE2AwABKAMAAaADAAEoAwABAQEAASAGAAFkEgAD
-        NwGqAhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMB
-        EgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AzcBqv8A/wAy
+        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAIAsAAAJNU0Z0AUkBTAMBAQAB
+        IAEAASABAAEoAQABKAEABP8BIQEACP8BQgFNATYHAAE2AwABKAMAAaADAAEoAwABAQEAASAGAAFkEgAD
+        UQGqAhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMB
+        EgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/A1EBqv8A/wAy
         AAITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB
-        /wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wIcARsB
-        8P8A/wAyAAITARIB/wITARIB/wMyAb0DOQF9AzkBfQM5AX0DOQF9AzkBfQM5AX0DOQF9AzkBfQM5AX0D
-        OQF9AzkBfQM5AX0DOQF9AzkBfQM5AX0DOQF9AyYBOv8A/wAyAAITARIB/wITARIB/wM5AX3/AP8AdgAC
-        EwESAf8CEwESAf8DOQF9/wD/AHYAAhMBEgH/AhMBEgH/AzkBff8A/wB2AAITARIB/wITARIB/wM5AX3/
-        AP8AdgACEwESAf8CEwESAf8DOQF9/wD/AHYAAhMBEgH/AhMBEgH/AzkBff8A/wB2AAITARIB/wITARIB
-        /wM5AX1sAAQC/wD/AAYAAhMBEgH/AhMBEgH/AzkBfWQAAwQBBQMtAcwDHwHsAyYBOv8A/wACAAITARIB
-        /wITARIB/wM5AX1kAAMPARMCFgEVAfsCEwESAf8CHAEbAfADJAE3/wD9AAITARIB/wITARIB/wM5AX1o
-        AAM1AWMCFQEUAf0CEwESAf8CHQEcAe8DJAE1/wD5AAITARIB/wITARIB/wM5AX1sAAM2AWgCFAETAf4C
-        EwESAf8CHwEeAe0DIgEy/wD1AAITARIB/wITARIB/wM5AX1wAAM2AWoCFAETAf4CEwESAf8DHwHsAyEB
-        MP8A8QACEwESAf8CEwESAf8DOQF9dAADNwFtAhQBEwH+AhMBEgH/Ax8B6wMfAS3/AO0AAhMBEgH/AhMB
-        EgH/AzkBfXgAAzcBcAIUARMB/gITARIB/wIfAR4B6gMfASz/AOkAAhMBEgH/AhMBEgH/AzkBfXwAAzgB
-        dQITARIB/wITARIB/wIgAR8B6AMdASn/AOUAAhMBEgH/AhMBEgH/AzkBfRgAAxwBJwMsAUgDLAFIAywB
-        SAMsAUgDLAFIAywBSAMsAUgDLAFIAywBSAMsAUgDLAFIAywBSAMsAUgDLAFIAywBSAMsAUgDLAFIAywB
-        SAMsAUgDLAFIAywBSAMsAUgDLAFIAywBSAMsAUgCNQE0AbcCEwESAf8CEwESAf8CIQEgAeYDHAEn/wDh
-        AAITARIB/wITARIB/wM5AX0UAAMZASICFwEWAfkCEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8C
-        EwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8C
-        EwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8C
-        EwESAf8CEwESAf8CEwESAf8CEwESAf8DJwHc/wDhAAITARIB/wITARIB/wM5AX0UAAMXAR8CFwEWAfYC
-        EwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8C
-        EwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8C
-        EwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CKAEnAdj/
-        AOEAAhMBEgH/AhMBEgH/AzkBfRgAAxcBHwMoAT4DKAE+AygBPgMoAT4DKAE+AygBPgMoAT4DKAE+AygB
-        PgMoAT4DKAE+AygBPgMoAT4DKAE+AygBPgMoAT4DKAE+AygBPgMoAT4DKAE+AygBPgMoAT4DKAE+AygB
-        PgMoAT4CNQE0AbcCEwESAf8CEwESAf8CJAEjAeIDGQEi/wDhAAITARIB/wITARIB/wM5AX18AAM5AX8C
-        EwESAf8CEwESAf8CJAEiAeMDGQEj/wDlAAITARIB/wITARIB/wM5AX14AAM5AXsCEwESAf8CEwESAf8C
-        IgEhAeUDGwEm/wDpAAITARIB/wITARIB/wM5AX10AAI5ATgBdwITARIB/wITARIB/wIhASAB5wMcASj/
-        AO0AAhMBEgH/AhMBEgH/AzkBfXAAAzgBcwITARIB/wITARIB/wIgAR8B6AMdASr/APEAAhMBEgH/AhMB
-        EgH/AzkBfWwAAzcBcAIUARMB/gITARIB/wMfAeoDHwEs/wD1AAITARIB/wITARIB/wM5AX1oAAM3AWwC
-        FAETAf4CEwESAf8DHwHrAyABLv8A+QACEwESAf8CEwESAf8DOQF9ZAADDwEUAhUBFAH8AhMBEgH/Ax8B
-        7AMhATD/AP0AAhMBEgH/AhMBEgH/AzkBfWQAAwMBBAMxAcICIwEhAeQDIwEz/wD/AAIAAhMBEgH/AhMB
-        EgH/AzkBff8A/wB2AAITARIB/wITARIB/wM5AX3/AP8AdgACEwESAf8CEwESAf8DOQF9/wD/AHYAAhMB
-        EgH/AhMBEgH/AzkBff8A/wB2AAITARIB/wITARIB/wM5AX3/AP8AdgACEwESAf8CEwESAf8DOQF9/wD/
-        AHYAAhMBEgH/AhMBEgH/AzkBff8A/wB2AAITARIB/wITARIB/wMyAb0DOQF9AzkBfQM5AX0DOQF9AzkB
-        fQM5AX0DOQF9AzkBfQM5AX0DOQF9AzkBfQM5AX0DOQF9AzkBfQM5AX0DOQF9AyYBOv8A/wAyAAITARIB
+        /wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wIxATAB
+        8P8A/wAyAAITARIB/wITARIB/wNUAb0DRgF9A0YBfQNGAX0DRgF9A0YBfQNGAX0DRgF9A0YBfQNGAX0D
+        RgF9A0YBfQNGAX0DRgF9A0YBfQNGAX0DRgF9AycBOv8A/wAyAAITARIB/wITARIB/wNGAX3/AP8AdgAC
+        EwESAf8CEwESAf8DRgF9/wD/AHYAAhMBEgH/AhMBEgH/A0YBff8A/wB2AAITARIB/wITARIB/wNGAX3/
+        AP8AdgACEwESAf8CEwESAf8DRgF9/wD/AHYAAhMBEgH/AhMBEgH/A0YBff8A/wB2AAITARIB/wITARIB
+        /wNGAX1sAAQC/wD/AAYAAhMBEgH/AhMBEgH/A0YBfWQAAwQBBQNQAcwDOQHsAycBOv8A/wACAAITARIB
+        /wITARIB/wNGAX1kAAMPARMCHwEeAfsCEwESAf8CMQEwAfADJQE3/wD9AAITARIB/wITARIB/wNGAX1o
+        AAM7AWMCGwEaAf0CEwESAf8CMwEyAe8DJAE1/wD5AAITARIB/wITARIB/wNGAX1sAAM9AWgCFwEWAf4C
+        EwESAf8COAE3Ae0DIwEy/wD1AAITARIB/wITARIB/wNGAX1wAAM+AWoCFwEWAf4CEwESAf8DOQHsAyEB
+        MP8A8QACEwESAf8CEwESAf8DRgF9dAADPwFtAhcBFgH+AhMBEgH/AzwB6wMgAS3/AO0AAhMBEgH/AhMB
+        EgH/A0YBfXgAA0ABcAIXARYB/gITARIB/wM6AeoDHwEs/wDpAAITARIB/wITARIB/wNGAX18AANCAXUC
+        EwESAf8CEwESAf8COwE6AegDHQEp/wDlAAITARIB/wITARIB/wNGAX0YAAMcAScDLgFIAy4BSAMuAUgD
+        LgFIAy4BSAMuAUgDLgFIAy4BSAMuAUgDLgFIAy4BSAMuAUgDLgFIAy4BSAMuAUgDLgFIAy4BSAMuAUgD
+        LgFIAy4BSAMuAUgDLgFIAy4BSAMuAUgDLgFIA1QBtwITARIB/wITARIB/wNBAeYDHAEn/wDhAAITARIB
+        /wITARIB/wNGAX0UAAMZASIDHQH5AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMB
+        EgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMB
+        EgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMB
+        EgH/AhMBEgH/AhMBEgH/A0oB3P8A4QACEwESAf8CEwESAf8DRgF9FAADFwEfAiQBIwH2AhMBEgH/AhMB
+        EgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMB
+        EgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMB
+        EgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/A0sB2P8A4QACEwESAf8C
+        EwESAf8DRgF9GAADFwEfAykBPgMpAT4DKQE+AykBPgMpAT4DKQE+AykBPgMpAT4DKQE+AykBPgMpAT4D
+        KQE+AykBPgMpAT4DKQE+AykBPgMpAT4DKQE+AykBPgMpAT4DKQE+AykBPgMpAT4DKQE+AykBPgNUAbcC
+        EwESAf8CEwESAf8DQgHiAxkBIv8A4QACEwESAf8CEwESAf8DRgF9fAADRgF/AhMBEgH/AhMBEgH/AkQB
+        QgHjAxkBI/8A5QACEwESAf8CEwESAf8DRgF9eAADRAF7AhMBEgH/AhMBEgH/A0EB5QMbASb/AOkAAhMB
+        EgH/AhMBEgH/A0YBfXQAA0MBdwITARIB/wITARIB/wM/AecDHQEo/wDtAAITARIB/wITARIB/wNGAX1w
+        AANBAXMCEwESAf8CEwESAf8COwE6AegDHgEq/wDxAAITARIB/wITARIB/wNGAX1sAANAAXACFwEWAf4C
+        EwESAf8DOgHqAx8BLP8A9QACEwESAf8CEwESAf8DRgF9aAADPwFsAhcBFgH+AhMBEgH/AzwB6wMgAS7/
+        APkAAhMBEgH/AhMBEgH/A0YBfWQAAw8BFAIbARoB/AITARIB/wM5AewDIQEw/wD9AAITARIB/wITARIB
+        /wNGAX1kAAMDAQQDUQHCAz8B5AMjATP/AP8AAgACEwESAf8CEwESAf8DRgF9/wD/AHYAAhMBEgH/AhMB
+        EgH/A0YBff8A/wB2AAITARIB/wITARIB/wNGAX3/AP8AdgACEwESAf8CEwESAf8DRgF9/wD/AHYAAhMB
+        EgH/AhMBEgH/A0YBff8A/wB2AAITARIB/wITARIB/wNGAX3/AP8AdgACEwESAf8CEwESAf8DRgF9/wD/
+        AHYAAhMBEgH/AhMBEgH/A1QBvQNGAX0DRgF9A0YBfQNGAX0DRgF9A0YBfQNGAX0DRgF9A0YBfQNGAX0D
+        RgF9A0YBfQNGAX0DRgF9A0YBfQNGAX0DJwE6/wD/ADIAAhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMB
+        EgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMB
+        EgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AjEBMAHw/wD/ADIAA1EBqgITARIB/wITARIB/wITARIB
         /wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB
-        /wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wIcARsB8P8A/wAy
-        AAM3AaoCEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8C
-        EwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8DNwGq/wD/
-        ADIAAUIBTQE+BwABPgMAASgDAAGgAwABKAMAAQEBAAEBBQABIAEDFgAD/wMAAQ8C/xEAAQ8C/xEAAQ8C
-        /w8AAR8E/w8AAR8E/w8AAR8E/w8AAR8E/w8AAR8E/w8AAR8E/w8AAR8C/wH9Af8PAAEfAv8B8AH/DwAB
-        HwL/AfABfw8AAR8C/wH4AT8PAAEfAv8B/AEfDwABHwL/Af4BDw8AAR8D/wEHDwABHwP/AYMPAAEfA/8B
-        wQ8AAR8BgBIAAR8TAAEfEwABHwGAEgABHwP/AcEPAAEfA/8Bgw8AAR8D/wEHDwABHwL/Af4BDw8AAR8C
-        /wH8AR8PAAEfAv8B+AE/DwABHwL/AfABfw8AAR8C/wHwAf8PAAEfBP8PAAEfBP8PAAEfBP8PAAEfBP8P
-        AAEfBP8PAAEfBP8PAAEfBP8RAAEPAv8RAAEPAv8RAAEPAv8PAAs=
+        /wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wNRAar/AP8AMgABQgFNAT4HAAE+AwABKAMAAaAD
+        AAEoAwABAQEAAQEFAAEgAQMWAAP/AwABDwL/EQABDwL/EQABDwL/DwABHwT/DwABHwT/DwABHwT/DwAB
+        HwT/DwABHwT/DwABHwT/DwABHwL/Af0B/w8AAR8C/wHwAf8PAAEfAv8B8AF/DwABHwL/AfgBPw8AAR8C
+        /wH8AR8PAAEfAv8B/gEPDwABHwP/AQcPAAEfA/8Bgw8AAR8D/wHBDwABHwGAEgABHxMAAR8TAAEfAYAS
+        AAEfA/8BwQ8AAR8D/wGDDwABHwP/AQcPAAEfAv8B/gEPDwABHwL/AfwBHw8AAR8C/wH4AT8PAAEfAv8B
+        8AF/DwABHwL/AfAB/w8AAR8E/w8AAR8E/w8AAR8E/w8AAR8E/w8AAR8E/w8AAR8E/w8AAR8E/xEAAQ8C
+        /xEAAQ8C/xEAAQ8C/w8ACw==
 </value>
   </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>37</value>
+  </metadata>
 </root>
