Programın Genel Kullanım Testinin Gerçekleştirilmesi
#23 Araç Listesinde eksik olan bazı materyallerin kontroller sırasında fark edilip form içerisine entegre edilmesi gerçekleştirildi.

--- a/AracListe.resx
+++ b/AracListe.resx
@@ -124,55 +124,55 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
         LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
-        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAIAsAAAJNU0Z0AUkBTAMBAQAB
-        IAEAASABAAEoAQABKAEABP8BIQEACP8BQgFNATYHAAE2AwABKAMAAaADAAEoAwABAQEAASAGAAFkEgAD
-        UQGqAhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMB
-        EgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/A1EBqv8A/wAy
+        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAHAsAAAJNU0Z0AUkBTAMBAQAB
+        KAEAASgBAAEoAQABKAEABP8BIQEACP8BQgFNATYHAAE2AwABKAMAAaADAAEoAwABAQEAASAGAAFkEgAD
+        UwGqAhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMB
+        EgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/A1MBqv8A/wAy
         AAITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB
-        /wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wIxATAB
-        8P8A/wAyAAITARIB/wITARIB/wNUAb0DRgF9A0YBfQNGAX0DRgF9A0YBfQNGAX0DRgF9A0YBfQNGAX0D
+        /wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wI2ATUB
+        8P8A/wAyAAITARIB/wITARIB/wNXAb0DRgF9A0YBfQNGAX0DRgF9A0YBfQNGAX0DRgF9A0YBfQNGAX0D
         RgF9A0YBfQNGAX0DRgF9A0YBfQNGAX0DRgF9AycBOv8A/wAyAAITARIB/wITARIB/wNGAX3/AP8AdgAC
         EwESAf8CEwESAf8DRgF9/wD/AHYAAhMBEgH/AhMBEgH/A0YBff8A/wB2AAITARIB/wITARIB/wNGAX3/
         AP8AdgACEwESAf8CEwESAf8DRgF9/wD/AHYAAhMBEgH/AhMBEgH/A0YBff8A/wB2AAITARIB/wITARIB
-        /wNGAX1sAAQC/wD/AAYAAhMBEgH/AhMBEgH/A0YBfWQAAwQBBQNQAcwDOQHsAycBOv8A/wACAAITARIB
-        /wITARIB/wNGAX1kAAMPARMCHwEeAfsCEwESAf8CMQEwAfADJQE3/wD9AAITARIB/wITARIB/wNGAX1o
-        AAM7AWMCGwEaAf0CEwESAf8CMwEyAe8DJAE1/wD5AAITARIB/wITARIB/wNGAX1sAAM9AWgCFwEWAf4C
-        EwESAf8COAE3Ae0DIwEy/wD1AAITARIB/wITARIB/wNGAX1wAAM+AWoCFwEWAf4CEwESAf8DOQHsAyEB
-        MP8A8QACEwESAf8CEwESAf8DRgF9dAADPwFtAhcBFgH+AhMBEgH/AzwB6wMgAS3/AO0AAhMBEgH/AhMB
-        EgH/A0YBfXgAA0ABcAIXARYB/gITARIB/wM6AeoDHwEs/wDpAAITARIB/wITARIB/wNGAX18AANCAXUC
-        EwESAf8CEwESAf8COwE6AegDHQEp/wDlAAITARIB/wITARIB/wNGAX0YAAMcAScDLgFIAy4BSAMuAUgD
-        LgFIAy4BSAMuAUgDLgFIAy4BSAMuAUgDLgFIAy4BSAMuAUgDLgFIAy4BSAMuAUgDLgFIAy4BSAMuAUgD
-        LgFIAy4BSAMuAUgDLgFIAy4BSAMuAUgDLgFIA1QBtwITARIB/wITARIB/wNBAeYDHAEn/wDhAAITARIB
-        /wITARIB/wNGAX0UAAMZASIDHQH5AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMB
-        EgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMB
-        EgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMB
-        EgH/AhMBEgH/AhMBEgH/A0oB3P8A4QACEwESAf8CEwESAf8DRgF9FAADFwEfAiQBIwH2AhMBEgH/AhMB
-        EgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMB
-        EgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMB
-        EgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/A0sB2P8A4QACEwESAf8C
-        EwESAf8DRgF9GAADFwEfAykBPgMpAT4DKQE+AykBPgMpAT4DKQE+AykBPgMpAT4DKQE+AykBPgMpAT4D
-        KQE+AykBPgMpAT4DKQE+AykBPgMpAT4DKQE+AykBPgMpAT4DKQE+AykBPgMpAT4DKQE+AykBPgNUAbcC
-        EwESAf8CEwESAf8DQgHiAxkBIv8A4QACEwESAf8CEwESAf8DRgF9fAADRgF/AhMBEgH/AhMBEgH/AkQB
-        QgHjAxkBI/8A5QACEwESAf8CEwESAf8DRgF9eAADRAF7AhMBEgH/AhMBEgH/A0EB5QMbASb/AOkAAhMB
-        EgH/AhMBEgH/A0YBfXQAA0MBdwITARIB/wITARIB/wM/AecDHQEo/wDtAAITARIB/wITARIB/wNGAX1w
-        AANBAXMCEwESAf8CEwESAf8COwE6AegDHgEq/wDxAAITARIB/wITARIB/wNGAX1sAANAAXACFwEWAf4C
-        EwESAf8DOgHqAx8BLP8A9QACEwESAf8CEwESAf8DRgF9aAADPwFsAhcBFgH+AhMBEgH/AzwB6wMgAS7/
-        APkAAhMBEgH/AhMBEgH/A0YBfWQAAw8BFAIbARoB/AITARIB/wM5AewDIQEw/wD9AAITARIB/wITARIB
-        /wNGAX1kAAMDAQQDUQHCAz8B5AMjATP/AP8AAgACEwESAf8CEwESAf8DRgF9/wD/AHYAAhMBEgH/AhMB
-        EgH/A0YBff8A/wB2AAITARIB/wITARIB/wNGAX3/AP8AdgACEwESAf8CEwESAf8DRgF9/wD/AHYAAhMB
-        EgH/AhMBEgH/A0YBff8A/wB2AAITARIB/wITARIB/wNGAX3/AP8AdgACEwESAf8CEwESAf8DRgF9/wD/
-        AHYAAhMBEgH/AhMBEgH/A1QBvQNGAX0DRgF9A0YBfQNGAX0DRgF9A0YBfQNGAX0DRgF9A0YBfQNGAX0D
-        RgF9A0YBfQNGAX0DRgF9A0YBfQNGAX0DJwE6/wD/ADIAAhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMB
-        EgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMB
-        EgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AjEBMAHw/wD/ADIAA1EBqgITARIB/wITARIB/wITARIB
+        /wNGAX1sAAQC/wD/AAYAAhMBEgH/AhMBEgH/A0YBfWQAAwQBBQNVAcwDQAHsAycBOv8A/wACAAITARIB
+        /wITARIB/wNGAX1kAAMPARMCIQEgAfsCEwESAf8CNgE1AfADJQE3/wD9AAITARIB/wITARIB/wNGAX1o
+        AAM7AWMCHQEcAf0CEwESAf8COQE4Ae8DJAE1/wD5AAITARIB/wITARIB/wNGAX1sAAM9AWgCGAEXAf4C
+        EwESAf8CPQE8Ae0DIwEy/wD1AAITARIB/wITARIB/wNGAX1wAAM+AWoCGAEXAf4CEwESAf8DQAHsAyEB
+        MP8A8QACEwESAf8CEwESAf8DRgF9dAADPwFtAhgBFwH+AhMBEgH/A0EB6wMgAS3/AO0AAhMBEgH/AhMB
+        EgH/A0YBfXgAA0ABcAIYARcB/gITARIB/wM/AeoDHwEs/wDpAAITARIB/wITARIB/wNGAX18AANCAXUC
+        EwESAf8CEwESAf8DQgHoAx0BKf8A5QACEwESAf8CEwESAf8DRgF9GAADHAEnAy4BSAMuAUgDLgFIAy4B
+        SAMuAUgDLgFIAy4BSAMuAUgDLgFIAy4BSAMuAUgDLgFIAy4BSAMuAUgDLgFIAy4BSAMuAUgDLgFIAy4B
+        SAMuAUgDLgFIAy4BSAMuAUgDLgFIAy4BSANWAbcCEwESAf8CEwESAf8DSAHmAxwBJ/8A4QACEwESAf8C
+        EwESAf8DRgF9FAADGQEiAx8B+QITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB
         /wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB
-        /wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wNRAar/AP8AMgABQgFNAT4HAAE+AwABKAMAAaAD
-        AAEoAwABAQEAAQEFAAEgAQMWAAP/AwABDwL/EQABDwL/EQABDwL/DwABHwT/DwABHwT/DwABHwT/DwAB
-        HwT/DwABHwT/DwABHwT/DwABHwL/Af0B/w8AAR8C/wHwAf8PAAEfAv8B8AF/DwABHwL/AfgBPw8AAR8C
-        /wH8AR8PAAEfAv8B/gEPDwABHwP/AQcPAAEfA/8Bgw8AAR8D/wHBDwABHwGAEgABHxMAAR8TAAEfAYAS
-        AAEfA/8BwQ8AAR8D/wGDDwABHwP/AQcPAAEfAv8B/gEPDwABHwL/AfwBHw8AAR8C/wH4AT8PAAEfAv8B
-        8AF/DwABHwL/AfAB/w8AAR8E/w8AAR8E/w8AAR8E/w8AAR8E/w8AAR8E/w8AAR8E/w8AAR8E/xEAAQ8C
-        /xEAAQ8C/xEAAQ8C/w8ACw==
+        /wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB
+        /wITARIB/wITARIB/wNQAdz/AOEAAhMBEgH/AhMBEgH/A0YBfRQAAxcBHwIpASgB9gITARIB/wITARIB
+        /wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB
+        /wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB
+        /wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wNRAdj/AOEAAhMBEgH/AhMB
+        EgH/A0YBfRgAAxcBHwMpAT4DKQE+AykBPgMpAT4DKQE+AykBPgMpAT4DKQE+AykBPgMpAT4DKQE+AykB
+        PgMpAT4DKQE+AykBPgMpAT4DKQE+AykBPgMpAT4DKQE+AykBPgMpAT4DKQE+AykBPgMpAT4DVgG3AhMB
+        EgH/AhMBEgH/A0kB4gMZASL/AOEAAhMBEgH/AhMBEgH/A0YBfXwAA0YBfwITARIB/wITARIB/wJLAUkB
+        4wMZASP/AOUAAhMBEgH/AhMBEgH/A0YBfXgAA0QBewITARIB/wITARIB/wNHAeUDGwEm/wDpAAITARIB
+        /wITARIB/wNGAX10AANDAXcCEwESAf8CEwESAf8DRQHnAx0BKP8A7QACEwESAf8CEwESAf8DRgF9cAAD
+        QQFzAhMBEgH/AhMBEgH/A0IB6AMeASr/APEAAhMBEgH/AhMBEgH/A0YBfWwAA0ABcAIYARcB/gITARIB
+        /wM/AeoDHwEs/wD1AAITARIB/wITARIB/wNGAX1oAAM/AWwCGAEXAf4CEwESAf8DQQHrAyABLv8A+QAC
+        EwESAf8CEwESAf8DRgF9ZAADDwEUAh0BHAH8AhMBEgH/A0AB7AMhATD/AP0AAhMBEgH/AhMBEgH/A0YB
+        fWQAAwMBBANVAcIDRQHkAyMBM/8A/wACAAITARIB/wITARIB/wNGAX3/AP8AdgACEwESAf8CEwESAf8D
+        RgF9/wD/AHYAAhMBEgH/AhMBEgH/A0YBff8A/wB2AAITARIB/wITARIB/wNGAX3/AP8AdgACEwESAf8C
+        EwESAf8DRgF9/wD/AHYAAhMBEgH/AhMBEgH/A0YBff8A/wB2AAITARIB/wITARIB/wNGAX3/AP8AdgAC
+        EwESAf8CEwESAf8DVwG9A0YBfQNGAX0DRgF9A0YBfQNGAX0DRgF9A0YBfQNGAX0DRgF9A0YBfQNGAX0D
+        RgF9A0YBfQNGAX0DRgF9A0YBfQMnATr/AP8AMgACEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8C
+        EwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8C
+        EwESAf8CEwESAf8CEwESAf8CEwESAf8CNgE1AfD/AP8AMgADUwGqAhMBEgH/AhMBEgH/AhMBEgH/AhMB
+        EgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMB
+        EgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/A1MBqv8A/wAyAAFCAU0BPgcAAT4DAAEoAwABoAMAASgD
+        AAEBAQABAQUAASABAxYAA/8DAAEPAv8RAAEPAv8RAAEPAv8PAAEfBP8PAAEfBP8PAAEfBP8PAAEfBP8P
+        AAEfBP8PAAEfBP8PAAEfAv8B/QH/DwABHwL/AfAB/w8AAR8C/wHwAX8PAAEfAv8B+AE/DwABHwL/AfwB
+        Hw8AAR8C/wH+AQ8PAAEfA/8BBw8AAR8D/wGDDwABHwP/AcEPAAEfAYASAAEfEwABHxMAAR8BgBIAAR8D
+        /wHBDwABHwP/AYMPAAEfA/8BBw8AAR8C/wH+AQ8PAAEfAv8B/AEfDwABHwL/AfgBPw8AAR8C/wHwAX8P
+        AAEfAv8B8AH/DwABHwT/DwABHwT/DwABHwT/DwABHwT/DwABHwT/DwABHwT/DwABHwT/EQABDwL/EQAB
+        DwL/EQABDwL/DwAL
 </value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
